correct path to lifestream script

--- a/layouts/page.html
+++ b/layouts/page.html
@@ -118,7 +118,7 @@
 
     <script src="{{baseurl}}public/js/libs/jquery.min.js"></script>
     <script src="{{baseurl}}public/js/libs/raphael-min.js"></script>
-    <script src="{{baseurl}}/public/js/libs/jquery.lifestream.min.js"></script>
+    <script src="{{baseurl}}public/js/libs/jquery.lifestream.min.js"></script>
 
     <script src="{{baseurl}}public/js/scripts.js"></script>
   </body>
