slight changes to layout, move assets to layouts/public and add grunt.js

--- a/layouts/Slides.html
+++ b/layouts/Slides.html
@@ -6,7 +6,7 @@
     <meta name="description" content="LyonJS Meetup">
     <meta name="author" content="">
 
-    <link rel="stylesheet" href="{{ baseurl }}public/css/style.css" >
+    <link rel="stylesheet" href="{{ baseurl }}/public/css/style.css" >
 
     <style type="text/css">
       /* Override some defaults */
@@ -116,10 +116,10 @@
 
     </div>
 
-    <script src="{{baseurl}}public/js/libs/jquery.min.js"></script>
-    <script src="{{baseurl}}public/js/libs/raphael-min.js"></script>
-    <script src="{{baseurl}}public/js/libs/jquery.lifestream.min.js"></script>
+    <script src="{{baseurl}}/public/js/libs/jquery.min.js"></script>
+    <script src="{{baseurl}}/public/js/libs/raphael-min.js"></script>
+    <script src="{{baseurl}}/public/js/libs/jquery.lifestream.min.js"></script>
 
-    <script src="{{baseurl}}public/js/scripts.js"></script>
+    <script src="{{baseurl}}/public/js/scripts.js"></script>
   </body>
 </html>
