--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="LyonJS Meetup">
     <meta name="author" content="">
 
-    <link rel="stylesheet" href="./public/css/style.css" >
+    <link rel="stylesheet" href="{{baseurl}}/public/css/style.css" >
 
   </head>
 
@@ -243,14 +243,10 @@
 
     </script>
 
-    <script src="./public/js/libs/jquery.min.js"></script>
-    <script src="./public/js/libs/raphael-min.js"></script>
-    <script src="./public/js/libs/jquery.lifestream.min.js"></script>
-
-    <!-- scripts concatenated and minified via ant build script-->
-    <script src="./public/js/scripts.js"></script>
-    <!-- end scripts-->
-
+    <script src="{{baseurl}}/public/js/libs/jquery.min.js"></script>
+    <script src="{{baseurl}}/public/js/libs/raphael-min.js"></script>
+    <script src="{{baseurl}}/public/js/libs/jquery.lifestream.min.js"></script>
+    <script src="{{baseurl}}/public/js/scripts.js"></script>
   </body>
 </html>
 
