slight changes to index layout heading
* remove the next event date, done in wiki content
* update secondary link to mailing list

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -39,10 +39,7 @@
           <h3>Où ?</h3>
           <p><a href="http://www.epitech.eu/">Epitech Lyon</a>, <a href="http://maps.google.fr/maps/place?q=Epitech+Lyon&hl=fr&cid=2934105339601756812">86 Boulevard Marius Vivier Merle, 69003 Lyon</a></p>
 
-          <h3>Quand?</h3>
-          <p>Prochaine session: Mardi 3 Janvier - 19:00.</p>
-
-          <p>Plus d'infos: par <a href="https://groups.google.com/d/topic/lyonjs/TFPzTYxQJpg/discussion">ici</a></p>
+          <p>Plus d'infos: par <a href="https://groups.google.com/forum/#!forum/lyonjs">ici</a></p>
 
           <p class="buttons bounceIn animate">
              <a href="https://groups.google.com/forum/#!forum/lyonjs" class="btn">Mailing-list</a>
