--- a/layouts/Slides.html
+++ b/layouts/Slides.html
@@ -1,114 +1,121 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>LyonJS :: {{ title }}</title>
-    <meta name="description" content="LyonJS Meetup">
-    <meta name="author" content="">
+<!doctype html>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!-- Consider adding a manifest.appcache: h5bp.com/d/Offline -->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<head>
+  <meta charset="utf-8">
 
-    <link rel="stylesheet" href="{{ baseurl }}/public/css/style.css" >
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <style type="text/css">
-      /* Override some defaults */
-      html, body {
-        background-color: #eee;
-        padding: 0;
-      }
+  <title>LyonJS :: {{ title }}</title>
+  <meta name="description" content="LyonJS Meetup">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="{{ baseurl }}/public/css/style.css" >
 
-      .container > footer p {
-        text-align: center; /* center align it with the container */
-      }
+  <style type="text/css">
+    /* Override some defaults */
+    html, body {
+      background-color: #eee;
+      padding: 0;
+    }
 
-      /* The white background content wrapper */
-      .content {
-        background-color: #fff;
-        margin-top: 40px;
-        padding: 20px;
-        -webkit-border-radius: 0 0 6px 6px;
-           -moz-border-radius: 0 0 6px 6px;
-                border-radius: 0 0 6px 6px;
-        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-                box-shadow: 0 1px 2px rgba(0,0,0,.15);
-      }
+    .container > footer p {
+      text-align: center; /* center align it with the container */
+    }
 
-      /* Page header tweaks */
-      .page-header {
-        background-color: #f5f5f5;
-        padding: 20px 20px 10px;
-        margin: -20px -20px 20px;
-      }
+    /* The white background content wrapper */
+    .content {
+      background-color: #fff;
+      margin-top: 40px;
+      padding: 20px;
+      -webkit-border-radius: 0 0 6px 6px;
+         -moz-border-radius: 0 0 6px 6px;
+              border-radius: 0 0 6px 6px;
+      -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+         -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+              box-shadow: 0 1px 2px rgba(0,0,0,.15);
+    }
 
-      /* Give a quick and non-cross-browser friendly divider */
-      .content .menu-rg {
-        margin-left: 0;
-        padding-left: 19px;
-        border-left: 1px solid #eee;
-      }
+    /* Page header tweaks */
+    .page-header {
+      background-color: #f5f5f5;
+      padding: 20px 20px 10px;
+      margin: -20px -20px 20px;
+    }
 
-      .topbar .btn {
-        border: 0;
-      }
+    /* Give a quick and non-cross-browser friendly divider */
+    .content .menu-rg {
+      margin-left: 0;
+      padding-left: 19px;
+      border-left: 1px solid #eee;
+    }
 
-    </style>
-  </head>
+    .topbar .btn {
+      border: 0;
+    }
 
-  <body>
-    <header class="subhead">
-      <div class="subnav">
-        <div class="container">
-          <ul class="nav pills">
-          {{#files}}
-            <li><a href="{{ href }}">{{ title }}</a></li>
-          {{/files}}
+  </style>
+</head>
+
+<body>
+  <header class="subhead">
+    <div class="subnav">
+      <div class="container">
+        <ul class="nav pills">
+        {{#files}}
+          <li><a href="{{ href }}">{{ title }}</a></li>
+        {{/files}}
+        </ul>
+      </div>
+    </div>
+  </header>
+  <div class="container">
+
+
+    <div class="content">
+      <div class="page-header">
+        <h1>LyonJS <small>{{ title }}</small></h1>
+      </div>
+      <div class="row">
+        <div class="span8">
+          {{{ content }}}
+        </div>
+        <div class="span3 menu-rg">
+          <h3>On twitter</h3>
+
+          <div class="twitter-stream">
+            <span class="spinner"></span>
+          </div>
+
+          <hr />
+
+          <ul class="nav">
+            {{#files}}
+              <li><a href="{{ href }}">{{ title }}</a></li>
+            {{/files}}
           </ul>
+
         </div>
       </div>
-    </header>
-    <div class="container">
-
-
-      <div class="content">
-        <div class="page-header">
-          <h1>LyonJS <small>{{ title }}</small></h1>
-        </div>
-        <div class="row">
-          <div class="span8">
-            {{{ content }}}
-          </div>
-          <div class="span3 menu-rg">
-            <h3>On twitter</h3>
-
-            <div class="twitter-stream">
-              <span class="spinner"></span>
-            </div>
-
-            <hr />
-
-            <ul class="nav">
-              {{#files}}
-                <li><a href="{{ href }}">{{ title }}</a></li>
-              {{/files}}
-            </ul>
-
-          </div>
-        </div>
-      </div>
-
-      <footer>
-        <p class="twt"></p>
-        <p class="buttons">
-          <a href="http://twitter.com/lyonjs" class="twitter-follow-button twitter"></a>
-          <a href="http://github.com/lyonjs" class="twitter-follow-button github"></a>
-        </p>
-      </footer>
-
     </div>
 
-    <script src="{{baseurl}}/public/js/libs/jquery.min.js"></script>
-    <script src="{{baseurl}}/public/js/libs/raphael-min.js"></script>
-    <script src="{{baseurl}}/public/js/libs/jquery.lifestream.min.js"></script>
+    <footer>
+      <p class="twt"></p>
+      <p class="buttons">
+        <a href="http://twitter.com/lyonjs" class="twitter-follow-button twitter"></a>
+        <a href="http://github.com/lyonjs" class="twitter-follow-button github"></a>
+      </p>
+    </footer>
 
-    <script src="{{baseurl}}/public/js/scripts.js"></script>
-  </body>
+  </div>
+
+  <script src="{{baseurl}}/public/js/libs/jquery.min.js"></script>
+  <script src="{{baseurl}}/public/js/libs/raphael-min.js"></script>
+  <script src="{{baseurl}}/public/js/libs/jquery.lifestream.min.js"></script>
+
+  <script src="{{baseurl}}/public/js/scripts.js"></script>
+</body>
 </html>
