twitter link typo

--- a/layout/template.html
+++ b/layout/template.html
@@ -49,7 +49,7 @@
 
         <p class="buttons bounceIn animate">
            <a href="https://groups.google.com/forum/#!forum/lyonjs" class="btn">Mailing-list</a>
-          <a href="http://twitter/#!/lyonjs" class="btn">Twitter</a>
+          <a href="http://twitter.com/#!/lyonjs" class="btn">Twitter</a>
           <a href="https://github.com/lyonjs" class="btn">GitHub</a>
         </p>
       </div>
