--- a/css/main.css
+++ b/css/main.css
@@ -5,10 +5,7 @@ body,
 article#next,
 article h2
 {
-  background-color:grey;
-  border-radius:3px;
-
-  
+  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAHklEQVQIW2P4//+/MBQzgDAICEMxXAAMYCoRIlCVANL6FYTYi5d+AAAAAElFTkSuQmCC);
 }
 
 * {
@@ -40,57 +37,8 @@ article h2 {
 article h2 a {
   color: inherit;
 }
-@-moz-keyframes charlieeee {
-  from { background-position:top left; } 
-  to {background-position:top right; }
-}
-@-webkit-keyframes charlieeee { 
-  from { background-position:top left; }  
-  to { background-position:top right; }  
-}
-@-o-keyframes charlieeee { 
-  from { background-position:top left; }  
-  to { background-position:top right; }  
-}
-@-ms-keyframes charlieeee { 
-  from { background-position:top left; }  
-  to { background-position:top right; }  
-}
-@-khtml-keyframes charlieeee { 
-  from { background-position:top left; }  
-  to { background-position:top right; }  
-}
-@keyframes charlieeee { 
-  from { background-position:top left; }  
-  to { background-position:top right; }  
-}
 
 article h2 {
-  background-image:-webkit-linear-gradient( left, red, orange, yellow, green,
-                                          blue, indigo, violet, indigo, blue,
-                                          green, yellow, orange, red );
-  background-image:-moz-linear-gradient( left, red, orange, yellow, green,
-                                         blue,indigo, violet, indigo, blue,
-                                         green, yellow, orange,red );
-  background-image:-o-linear-gradient( left, red, orange, yellow, green,
-                                         blue,indigo, violet, indigo, blue,
-                                         green, yellow, orange,red );
-  background-image:-ms-linear-gradient( left, red, orange, yellow, green,
-                                         blue,indigo, violet, indigo, blue,
-                                         green, yellow, orange,red );
-  background-image:-khtml-linear-gradient( left, red, orange, yellow, green,
-                                         blue,indigo, violet, indigo, blue,
-                                         green, yellow, orange,red );
-  background-image:linear-gradient( left, red, orange, yellow, green,
-                                         blue,indigo, violet, indigo, blue,
-                                         green, yellow, orange,red );
-  -moz-animation:charlieeee 25s forwards linear infinite;
-  -webkit-animation:charlieeee 25s forwards linear infinite;
-  -o-animation:charlieeee 25s forwards linear infinite;
-  -khtml-animation:charlieeee 25s forwards linear infinite;
-  -ms-animation:charlieeee 25s forwards linear infinite;
-  -lynx-animation:charlieeee 25s forwards linear infinite;
-  animation:charlieeee 25s forwards linear infinite;
   background-size:50% auto;
   text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
 }
