--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,27 +3,30 @@
 @tailwind utilities;
 
 :root {
-  --grey-0: #323330;
+  --grey-0: #0c0c0d;
   --yellow-0: #efda4e;
   --yellow-1: #b5a53c;
   --white-0: #ffffff;
-  --white-1: #b2b2b2;
+  --white-1: #cccccc;
+  --white-2: #b2b2b2;
 
   --background-color: var(--grey-0);
   --main-color: var(--yellow-0);
   --secondary-color: var(--yellow-1);
   --foreground-color: var(--white-0);
-  --border-color: var(--white-1);
+  --font-color-strong: var(--white-0);
+  --font-color-default: var(--white-1);
+  --border-color: var(--white-2);
 }
 
 body {
   background-color: var(--background-color);
-
-  color: var(--white-0);
+  color: var(--font-color-default);
 }
 
 main,
-footer {
+footer,
+#__next > header {
   padding: 8px 20px;
   max-width: 1200px;
   margin: auto;
@@ -35,4 +38,14 @@ footer {
   background: var(--main-color);
   color: var(--background-color);
   box-shadow: 0.5em 0 0 var(--main-color), -0.5em 0 0 var(--main-color);
+}
+
+button,
+a,
+[tabindex='0'] {
+  -webkit-tap-highlight-color: transparent;
+}
+
+[data-lock-scroll] {
+  overflow: hidden !important;
 }
