--- a/modules/header/header.module.css
+++ b/modules/header/header.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: auto;
+  margin-top: 10px;
 }
 
 @media (max-width: 900px) {
