Taking Julien feedbacks

--- a/modules/about/Orgas.module.css
+++ b/modules/about/Orgas.module.css
@@ -1,14 +1,9 @@
 .listOrgasContainer {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-  gap: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  max-width: 800px;
   margin-top: 56px;
-}
-
-@media (max-width: 900px) {
-  .listOrgasContainer {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
 }
 
 .member {
@@ -18,7 +13,7 @@
   text-align: center;
   gap: 16px;
   font-weight: 500;
-  color: var(--foreground-color);
+  color: var(--font-color-strong);
 }
 
 .member img {
@@ -26,6 +21,6 @@
   overflow: hidden;
 }
 
-.member figcaption {
+.member .socialsOrgas {
   display: flex;
 }
