--- a/modules/about/Socials.module.css
+++ b/modules/about/Socials.module.css
@@ -2,12 +2,7 @@
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   padding-top: 4rem;
-}
-
-.socialsContainer li {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
+  width: fit-content;
+  gap: 24px;
+  margin: auto;
 }
