--- a/modules/atoms/Heading.module.css
+++ b/modules/atoms/Heading.module.css
@@ -29,7 +29,7 @@
   font-weight: bold;
   color: var(--font-color-strong);
   text-decoration: underline;
-  text-underline-offset: 0.3rem;
+  text-underline-offset: 0.6rem;
   text-decoration-color: var(--main-color);
   margin-block: 3rem 1.5rem;
 }
@@ -37,6 +37,7 @@
 .h3 {
   font-weight: bold;
   color: var(--font-color-strong);
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
+  font-size: 1.2rem;
+  margin-bottom: 0.3rem;
+  margin-top: 2rem;
 }
