--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,7 @@
   --white-2: #b2b2b2;
 
   --background-color: var(--grey-0);
+  --background-card: #141415;
   --main-color: var(--yellow-0);
   --main-color-dark: var(--yellow-1);
   --font-color-strong: var(--white-0);
