--- a/modules/event/EventTile.module.css
+++ b/modules/event/EventTile.module.css
@@ -44,7 +44,7 @@
 }
 
 .eventTile .sponsor {
-  font-size: 14px;
-  line-height: 21px;
+  font-size: 0.875rem;
+  line-height: 1.2;
   font-weight: 700;
 }
