--- a/modules/about/Socials.module.css
+++ b/modules/about/Socials.module.css
@@ -1,8 +1,14 @@
 .socialsContainer {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   padding-top: 4rem;
   width: fit-content;
   gap: 24px;
   margin: auto;
+}
+
+@media screen and (min-width: 600px) {
+  .socialsContainer {
+    grid-template-columns: repeat(5, 1fr);
+  }
 }
