fix(about): fix mobile display of social links in about page (#68)

--- a/modules/about/Socials.module.css
+++ b/modules/about/Socials.module.css
@@ -3,6 +3,12 @@
   grid-template-columns: repeat(5, 1fr);
   padding-top: 4rem;
   width: fit-content;
-  gap: 24px;
+  gap: 0;
   margin: auto;
+}
+
+@media screen and (min-width: 600px) {
+  .socialsContainer {
+    gap: 24px;
+  }
 }
