--- a/modules/home/Home.module.css
+++ b/modules/home/Home.module.css
@@ -10,5 +10,12 @@
 }
 
 .secondaryTitle {
-  margin-block: 100px 50px;
+  margin-block: 100px 70px;
+}
+
+.seePastEvents {
+  margin-top: 50px;
+  display: flex;
+  width: fit-content;
+  margin-inline: auto;
 }
