feat(home): implement the design of the next event (#77)

--- a/modules/home/Home.module.css
+++ b/modules/home/Home.module.css
@@ -10,5 +10,18 @@
 }
 
 .secondaryTitle {
-  margin-block: 100px 50px;
+  margin-block: 100px 70px;
+}
+
+.seePastEvents {
+  margin-top: 70px;
+  display: flex;
+  width: fit-content;
+  margin-inline: auto;
+}
+
+@media (min-width: 900px) {
+  .seePastEvents {
+    margin-top: 50px;
+  }
 }
