--- a/modules/about/Orgas.module.css
+++ b/modules/about/Orgas.module.css
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   justify-content: space-around;
   max-width: 800px;
+  row-gap: 24px;
   margin-top: 56px;
 }
 
@@ -10,17 +11,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
-  gap: 16px;
   font-weight: 500;
   color: var(--font-color-strong);
 }
 
 .member img {
   border-radius: 50%;
-  overflow: hidden;
+  margin-bottom: 16px;
 }
 
 .member .socialsOrgas {
   display: flex;
+  gap: 4px;
 }
