--- a/modules/atoms/remark/Text.module.css
+++ b/modules/atoms/remark/Text.module.css
@@ -1,17 +1,22 @@
 .list {
   list-style: square;
-  color: var(--font-color-default);
-  padding: 1rem 2rem;
+  padding-left: 2rem;
+  margin-bottom: 1.5rem;
 }
 
 .paragraph {
-  font-size: 1rem;
-  color: var(--font-color-default);
-  line-height: 1.5rem;
   margin-block: 1rem;
+}
+
+h3 + .paragraph {
+  margin-top: 0;
 }
 
 .link {
   color: var(--main-color);
   text-decoration: none;
+}
+
+.link:hover {
+  text-decoration: underline;
 }
