--- a/modules/footer/Footer.module.css
+++ b/modules/footer/Footer.module.css
@@ -9,5 +9,5 @@
   margin-top: 5rem;
   padding: 2rem;
   border-top: 1px solid transparent;
-  border-image: linear-gradient(0.25turn, transparent, var(--border-color), transparent) 1;
+  border-image: linear-gradient(0.25turn, transparent, var(--border-strong), transparent) 1;
 }
