--- a/modules/sponsors/Sponsors.module.css
+++ b/modules/sponsors/Sponsors.module.css
@@ -15,6 +15,13 @@
   width: 250px;
   background-color: var(--background-card);
   border-radius: 12px;
+  transition: background-color 100ms, border-color 100ms;
+  border: 1px solid transparent;
+}
+
+.sponsors a:hover {
+  background-color: var(--background-card-hover);
+  border-color: var(--border-light);
 }
 
 .sponsors a img {
