refactor: group files for next and past events

--- a/modules/home/Home.module.css
+++ b/modules/home/Home.module.css
@@ -16,8 +16,7 @@
 .seePastEvents {
   margin-top: 70px;
   display: flex;
-  width: fit-content;
-  margin-inline: auto;
+  justify-content: center;
 }
 
 @media (min-width: 900px) {
