--- a/modules/home/Home.module.css
+++ b/modules/home/Home.module.css
@@ -5,10 +5,6 @@
   align-items: center;
 }
 
-.mainTitle::after {
-  content: none;
-}
-
 .secondaryTitle {
   margin-block: 100px 70px;
 }
@@ -16,8 +12,7 @@
 .seePastEvents {
   margin-top: 70px;
   display: flex;
-  width: fit-content;
-  margin-inline: auto;
+  justify-content: center;
 }
 
 @media (min-width: 900px) {
