--- a/modules/event/components/EventTile.module.css
+++ b/modules/event/components/EventTile.module.css
@@ -15,7 +15,8 @@
   border-color: var(--border-light);
 }
 
-.eventTile img {
+.eventTile img,
+.eventTile .fakeMedia {
   display: none;
   width: 160px;
   height: 90px;
@@ -23,12 +24,28 @@
   border-radius: 4px;
 }
 
+@keyframes placeholder {
+  0% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 0.9;
+  }
+}
+
+.eventTile .fakeMedia {
+  background: #cccccc;
+  border-radius: 8px;
+  animation: 500ms ease-in alternate infinite placeholder;
+}
+
 @media (min-width: 600px) {
   .eventTile {
     padding: 12px;
   }
 
-  .eventTile img {
+  .eventTile img,
+  .eventTile .fakeMedia {
     display: block;
   }
 }
@@ -67,4 +84,12 @@
 
 .eventTile .replay svg {
   display: inline;
+}
+
+.eventTile .fakeContent {
+  display: flex;
+  height: 90px;
+  flex-direction: column;
+  justify-content: start;
+  gap: 16px;
 }
