--- a/modules/event/components/EventTile.module.css
+++ b/modules/event/components/EventTile.module.css
@@ -92,6 +92,6 @@
   display: flex;
   height: 90px;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   gap: 16px;
 }
