feat(eventPage): add pictures of event from api (#202)
Co-authored-by: Antoine Caron <acaron@scaleway.com>

--- a/modules/event/components/EventDetail.module.css
+++ b/modules/event/components/EventDetail.module.css
@@ -59,3 +59,23 @@
   display: block;
   aspect-ratio: 16/9;
 }
+
+.imageCollection {
+  grid-column: 1 / 3;
+}
+
+.listImages {
+  display: flex;
+  gap: 2rem;
+  width: auto;
+  overflow: auto;
+  align-items: center;
+}
+
+.listImages img {
+  display: block;
+  min-width: 300px;
+  height: auto;
+  object-fit: cover;
+  object-position: center center;
+}
